# horses_selling

./: .gitignore  README.md  hello_world.py  mkdocs.yml  prueba_text.py  pyproject.toml
docs/: index.md
horse_selling/: caballo_detalles.xlsx  config.py  data_extraction.py
horses_selling/: caballo_detalles.xlsx  data_export.py  util.py
notebooks/: interact_with_a_webpage.ipynb  test.ipynb  test_page2.ipynb
