[project]
name = "horses-selling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.10.2",
    "selenium>=4.27.1",
    "typing>=3.10.0.0",
    "transformers>=4.46.3",
    "mkdocs>=1.6.1",
    "ipykernel>=6.29.5",
]
